--- a/css/cover.css
+++ b/css/cover.css
@@ -7,17 +7,38 @@ body {
   height: 100%;
   background-color: #333;
 }
+
 body {
   color: #fff;
   text-align: center;
 }
 
-a {
-  -webkit-animation: hue 40s infinite linear;
+a     {   -webkit-animation: hue 40s infinite linear; }
+
+img   {   vertical-align: text-bottom;    }
+
+h1    {   font-weight: 100;               }
+
+h1 b  {   font-weight: 400;               }
+
+.img-container { max-width: 200px;        }
+
+.item {   max-height: 200px;              }
+
+.nav-pills li, .nav-pills li a {
+  color: #fff;
+  background-color: #337ab7;
 }
 
-img {
-  vertical-align: text-bottom;
+.nav-pills li a:hover { color: #000000;   }
+
+canvas {
+  position:absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -61,6 +82,9 @@ img {
     padding-left: 80px;
     padding-right: 80px;
   }
+
+  .img-container {  max-width: 300px;   }
+  .item {           max-height: 300px;  }
 }
 
 @media (min-width: 992px) {
