--- a/css/cover.css
+++ b/css/cover.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
 }
 
-a     {   -webkit-animation: hue 40s infinite linear; }
+a, .dropdown-menu>li>a     {   color: #337ab7; -webkit-animation: hue 40s infinite linear; }
 
 img   {   vertical-align: text-bottom;    }
 
