--- a/css/cover.css
+++ b/css/cover.css
@@ -15,7 +15,12 @@ body {
 
 a, .dropdown-menu>li>a     {   color: #337ab7; -webkit-animation: hue 40s infinite linear; }
 
-img   {   vertical-align: text-bottom;    }
+img   {   vertical-align: text-bottom;
+          -webkit-animation: zoom 10s infinite ease-in-out;
+          animation: zoom 10s infinite ease-in-out; }
+
+@-webkit-keyframes zoom {0% {-webkit-transform: scale(1,1);}50% {-webkit-transform: scale(1.2,1.2);}100% {-webkit-transform: scale(1,1);}}
+@keyframes zoom {0% {-webkit-transform: scale(1,1);}50% {-webkit-transform: scale(1.2,1.2);}100% {-webkit-transform: scale(1,1);}}
 
 h1    {   font-weight: 100;               }
 
@@ -47,9 +52,15 @@ canvas {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  -webkit-animation: boxshadow 10s infinite ease-in-out;
+  animation: boxshadow 10s infinite ease-in-out;
 }
+
+@-webkit-keyframes boxshadow {0% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {-webkit-box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
+
+/* Standard syntax */
+@keyframes boxshadow {0% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
+
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
