--- a/css/cover.css
+++ b/css/cover.css
@@ -75,6 +75,22 @@ canvas {
   padding: 30px;
 }
 
+.popup {
+  display: block;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  height: 100px;
+  padding-top: 5px;
+  padding-right: 10px;
+  background-color: white;
+  z-index: 1002;
+  text-align: right;
+  vertical-align: text-top;
+  overflow: auto;
+}
+
 /*
  * Affix and center
  */
