--- a/css/cover.css
+++ b/css/cover.css
@@ -1,9 +1,5 @@
-/*
- * Base structure
- */
-
-html,
-body {
+/* Base structure */
+html, body {
   height: 100%;
   background-color: #333;
 }
@@ -13,23 +9,12 @@ body {
   text-align: center;
 }
 
-a, .dropdown-menu>li>a     {   color: #337ab7; -webkit-animation: hue 40s infinite linear; }
-
-img   {   vertical-align: text-bottom;
-          -webkit-animation: zoom 10s infinite ease-in-out;
-          animation: zoom 10s infinite ease-in-out; }
-
-@-webkit-keyframes zoom {0% {-webkit-transform: scale(1,1);}50% {-webkit-transform: scale(1.2,1.2);}100% {-webkit-transform: scale(1,1);}}
-@keyframes zoom {0% {-webkit-transform: scale(1,1);}50% {-webkit-transform: scale(1.2,1.2);}100% {-webkit-transform: scale(1,1);}}
-
 h1    {   font-weight: 100;               }
-
 h1 b  {   font-weight: 400;               }
-
+a, .dropdown-menu>li>a {  color: #337ab7; }
+img   {   vertical-align: text-bottom;    }
 .img-container { max-width: 200px;        }
-
 .item {   max-height: 200px;              }
-
 .nav-pills li, .nav-pills li a {
   color: #fff;
   background-color: #337ab7;
@@ -56,11 +41,6 @@ canvas {
   animation: boxshadow 10s infinite ease-in-out;
 }
 
-@-webkit-keyframes boxshadow {0% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {-webkit-box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
-
-/* Standard syntax */
-@keyframes boxshadow {0% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
-
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
@@ -71,9 +51,7 @@ canvas {
 }
 
 /* Padding for spacing */
-.inner {
-  padding: 30px;
-}
+.inner {  padding: 30px;  }
 
 .popup {
   display: block;
@@ -97,13 +75,9 @@ canvas {
 
 @media (min-width: 768px) {
   /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
+  .site-wrapper-inner { vertical-align: middle; }
   /* Handle the widths */
-  .cover-container {
-    width: 80%; /* Must be percentage or pixels for horizontal alignment */
-  }
+  .cover-container    { width: 80%;             }
 
   .info {
     padding-left: 80px;
@@ -112,16 +86,31 @@ canvas {
 
   .img-container {  max-width: 300px;   }
   .item {           max-height: 300px;  }
+
+  /* Webkit syntax */
+  @-webkit-keyframes zoom {
+    0% {-webkit-transform: scale(1,1);}
+    50% {-webkit-transform: scale(1.2,1.2);}
+    100% {-webkit-transform: scale(1,1);}}
+  @-webkit-keyframes hue {
+    from {  -webkit-filter: hue-rotate(0deg);   }
+    to {    -webkit-filter: hue-rotate(-360deg);}}
+  @-webkit-keyframes boxshadow {0% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {-webkit-box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
+  a, .dropdown-menu>li>a     {-webkit-animation: hue 40s infinite linear; animation: hue 40s infinite linear;}
+  img   {   -webkit-animation: zoom 10s infinite ease-in-out;
+            animation: zoom 10s infinite ease-in-out; }
+
+  /* Standard syntax */
+  @keyframes boxshadow {0% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
+  @keyframes zoom {
+    0% {transform: scale(1,1);}
+    50% {transform: scale(1.2,1.2);}
+    100% {transform: scale(1,1);}}
+  @keyframes hue {
+    from {  filter: hue-rotate(0deg);   }
+    to {    filter: hue-rotate(-360deg);}}
 }
 
 @media (min-width: 992px) {
-  .cover-container {
-    width: 700px;
-  }
-}
-
-@-webkit-keyframes hue {
-  from {  -webkit-filter: hue-rotate(0deg);   }
-
-  to {    -webkit-filter: hue-rotate(-360deg);}
+  .cover-container {  width: 700px; }
 }
