--- a/css/cover.css
+++ b/css/cover.css
@@ -37,8 +37,7 @@ canvas {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-animation: boxshadow 10s infinite ease-in-out;
-  animation: boxshadow 10s infinite ease-in-out;
+  box-shadow: inset 0 0 50px rgba(0,0,0,.5);
 }
 
 .site-wrapper-inner {
@@ -95,13 +94,11 @@ canvas {
   @-webkit-keyframes hue {
     from {  -webkit-filter: hue-rotate(0deg);   }
     to {    -webkit-filter: hue-rotate(-360deg);}}
-  @-webkit-keyframes boxshadow {0% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {-webkit-box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
   a, .dropdown-menu>li>a     {-webkit-animation: hue 40s infinite linear; animation: hue 40s infinite linear;}
   img   {   -webkit-animation: zoom 10s infinite ease-in-out;
             animation: zoom 10s infinite ease-in-out; }
 
   /* Standard syntax */
-  @keyframes boxshadow {0% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}50% {box-shadow: inset 0 0 250px rgba(0,0,0,.5);}100% {box-shadow: inset 0 0 100px rgba(0,0,0,.5);}}
   @keyframes zoom {
     0% {transform: scale(1,1);}
     50% {transform: scale(1.2,1.2);}
