--- a/css/cover.css
+++ b/css/cover.css
@@ -5,8 +5,9 @@ html, body {
 }
 
 body {
-  color: #fff;
   text-align: center;
+  color: #fff;
+  background-color: transparent;
 }
 
 h1    {   font-weight: 100;               }
@@ -21,6 +22,7 @@ img   {   vertical-align: text-bottom;    }
 }
 
 .nav-pills li a:hover { color: #000000;   }
+.navbar-nav           { margin: 0;        }
 
 canvas {
   position:absolute;
@@ -75,7 +77,7 @@ canvas {
 @media (min-width: 768px) {
   /* Start the vertical centering */
   .site-wrapper-inner { vertical-align: middle; }
-  
+
   /* Handle the widths */
   .cover-container    { width: 80%;             }
 
@@ -97,7 +99,7 @@ canvas {
     0% {transform: scale(1,1);}
     50% {transform: scale(1.2,1.2);}
     100% {transform: scale(1,1);}}
-  
+
   a, .dropdown-menu>li>a { -webkit-animation: hue 40s infinite linear; animation: hue 40s infinite linear; }
   @-webkit-keyframes hue {
     from {  -webkit-filter: hue-rotate(0deg);   }
