--- a/css/cover.css
+++ b/css/cover.css
@@ -55,19 +55,7 @@ canvas {
 .inner {  padding: 30px;  }
 
 .popup {
-  display: block;
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  width: 300px;
-  height: 100px;
-  padding-top: 5px;
-  padding-right: 10px;
-  background-color: white;
-  z-index: 1002;
-  text-align: right;
-  vertical-align: text-top;
-  overflow: auto;
+  display: none
 }
 
 /*
@@ -84,6 +72,22 @@ canvas {
   .info {
     padding-left: 80px;
     padding-right: 80px;
+  }
+
+  .popup {
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 300px;
+    height: 100px;
+    padding-top: 5px;
+    padding-right: 10px;
+    background-color: white;
+    z-index: 1002;
+    text-align: right;
+    vertical-align: text-top;
+    overflow: auto;
   }
 
   .img-container {  max-width: 300px;   }
