--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ nav li a:hover:not(.active) {
   background-color: #111;
 }
 
+header {
+  overflow: hidden;
+}
+
 main {
   padding: 2em;
   background: #eee;
@@ -158,7 +162,7 @@ label[for=drawer-toggle] {
 }
 
 #drawer-toggle:checked ~ label[for=drawer-toggle] .menu::before {
-    transform: rotate(270deg) translate(-11px, 0px);
+  transform: rotate(270deg) translate(-11px, 0px);
 }
 
 #drawer-toggle:checked ~ label[for=drawer-toggle] .menu {
@@ -166,8 +170,7 @@ label[for=drawer-toggle] {
 }
 
 #drawer-toggle:checked ~ label[for=drawer-toggle] .menu::after {
-  transform: rotate(45deg) translate(-200px, 100px);
-  opacity: 0;
+  transform: rotate(-270deg) translate(-11px, 0px);
 }
 
 @media (min-width: 600px) {
