--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,9 @@ h6 { font-size: 0.75em; }
 nav {
   position: absolute;
   width: 100%;
+  height: 0;
   opacity: 0;
+  overflow: hidden;
   transition: 0.4s;
 }
 
@@ -158,6 +160,7 @@ label[for=drawer-toggle] {
 }
 
 #drawer-toggle:checked ~ nav {
+  height: auto;
   opacity: 1;
 }
 
@@ -177,6 +180,7 @@ label[for=drawer-toggle] {
   nav {
     display: block;
     position: relative;
+    height: auto;
     opacity: 1;
   }
 
