--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,12 @@ tbody tr td.description {
   font-size: 1.17em;
 }
 
+tbody tr td.project {
+  font-size: 1.2em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 /* contact form */
 form input,
 form textarea,
@@ -393,9 +399,15 @@ main ul li a:hover {
   nav ul li:nth-child(5) {  order: 5; }
 
   /* resume table row */
-  tbody tr {
+  tbody.col-2 tr {
     float: left;
     width: 50%;
+  }
+
+  /* projects table row */
+  tbody.col-3 tr {
+    float: left;
+    width: 33%;
   }
 
   tbody tr:nth-child(odd) td {
