--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,13 @@ form button:focus {
   background-color: green;
 }
 
+.position-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 /* centering */
 .centered {
   position: relative;
