--- a/css/linkedin.css
+++ b/css/linkedin.css
@@ -8,6 +8,15 @@
   z-index: 1;
 }
 
+.LI-badge-container {
+  animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 .LI-name-container {
   display: block !important;
 }
