--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ ul.boxes li {
 
 ul.boxes li a {
   padding: 15px;
-  background-color: #fff;
+  background-color: white;
   color: black;
   text-decoration: none;
 }
