--- a/css/linkedin.css
+++ b/css/linkedin.css
@@ -1,11 +1,5 @@
 .LI-profile-badge {
   display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: #eee;
-  z-index: 1;
   padding-bottom: 1rem;
   line-height: 1.5;
 }
@@ -15,8 +9,12 @@
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .LI-name-container {
@@ -49,4 +47,5 @@
 .profile-badge__header-logo-icon svg {
   width: 84px;
   color: #0a66c2;
+  margin: auto;
 }
